Fixed repeating field overlap
Fixed weaponsection repeating field overlapping.

--- a/ShadowrunAnarchy/SR Anarchy.css
+++ b/ShadowrunAnarchy/SR Anarchy.css
@@ -140,7 +140,7 @@ img.sheet-header {
 
 .sheet-weaponsection .repcontainer {
 	margin-top: -25px;
-	margin-bottom: 40px;
+	margin-bottom: 20px;
 }
 
 .repcontrol .repcontrol_add, .repcontrol .repcontrol_edit {
@@ -1607,10 +1607,6 @@ div.sheet-col.sheet-toggle span {
 input.sheet-npc-desc {
 	width: 100%;
 	margin-left: 0px !important;
-}
-
-.sheet-weaponbox {
-	height: 20px;
 }
 
 .sheet-npc .sheet-weaponsubtitlesbox {
